--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
 DB_USER=postgres
 DB_PASSWORD=38614169
 DB_HOST=localhost
-
+PORT=3001
 DB_DEPLOY=postgresql://postgres:B7fJ3utpZK3toT7LMfMg@containers-us-west-30.railway.app:5993/railway
